--- a/lib/freeglut/freeglut/freeglut/CMakeLists.txt
+++ b/lib/freeglut/freeglut/freeglut/CMakeLists.txt
@@ -1,5 +1,6 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0 FATAL_ERROR)
 PROJECT(freeglut)
+cmake_policy(SET CMP0075 OLD)
 
 # for multiarch LIBDIR support (requires cmake>=2.8.8)
 INCLUDE(GNUInstallDirs)
